--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.484.0",
+    "lz-string": "^1.5.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-ace": "^14.0.1",
